# SmartPantry

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_recipe_embeddings.py
backend/app/: __init__.py  db.py  main.py
backend/app/api/: auth.py  detections.py  health.py  images.py  inventory.py  recipes.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/models/: __init__.py  image.py  inventory.py  recipe.py  recipe_embedding.py  user.py
backend/app/schemas/: __init__.py  assistant.py  image.py  inventory.py  recipe.py  user.py
backend/app/services/: __init__.py  detection.py  embeddings.py  images.py  llm.py  ranking_dataset.py  ranking_features.py  ranking_modeling.py  recipe_assistant.py  recipe_qa.py  recipes.py  recommendation_ranker.py  retrieval.py  storage.py
backend/artifacts/: recipe_ranker.json  recipe_ranker_metadata.json
backend/scripts/: benchmark_smart_add.py  benchmark_yolo_accuracy.py  build_recipe_ranking_dataset.py  eval_detection.py  evaluate_recipe_ranker.py  import_recipes.py  index_recipe_embeddings.py  train_recipe_ranker.py  train_yolo_pantry.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_images.py  test_inventory.py  test_rate_limit.py  test_recipe_import.py  test_recipes.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/lib/: session.ts
frontend/app/recipes/[id]/: page.tsx
frontend/app/recipes/book/: page.tsx
(+1 files in other folders)
