[project]
name = "smartpantry-backend"
version = "0.1.0"
description = "SmartPantry API — AI-powered kitchen inventory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.14.0",
    "openai>=1.75.0",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
ml = [
    "numpy<2",
    "opencv-python<4.12",
    "pillow>=10.0.0",
    "ultralytics>=8.2.0",
]
ranker = [
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
